# AdventOfCode

./: .gitignore  README.md  pyproject.toml  requirements_dev.txt  run.py  setup.cfg  tox.ini  variables.env
.github/workflows/: tests.yml
src/AdventUtils/: Bingo.py  Computer.py  Conway.py  Crypto.py  Day.py  Equation_solver.py  Graph.py  Grid2D.py  Grid3D.py  Math.py  holders.py
src/AoC2015/: Day1.py  Day10.py  Day11.py  Day12.py  Day13.py  Day14.py  Day15.py  Day16.py  Day17.py  Day18.py  Day19.py  Day2.py  Day20.py  Day21.py  Day22.py  Day23.py  Day24.py  Day25.py  Day3.py  Day4.py  Day5.py  Day6.py  Day7.py  Day8.py  Day9.py  Days.py
src/AoC2016/: Day1.py  Day10.py  Day11.py  Day2.py  Day3.py  Day4.py  Day5.py  Day6.py  Day7.py  Day8.py  Day9.py  DayX.py  Days.py
src/AoC2017/: Day1.py  DayX.py  Days.py
src/AoC2020/: Day1.py  Day2.py  Day3.py  DayX.py  Days.py
src/AoC2021/: Day1.py  Day10.py  Day11.py  Day12.py  Day13.py  Day14.py  Day15.py  Day16.py  Day17.py  Day18.py  Day19.py  Day2.py  Day20.py  Day21.py  Day22.py  Day23.py  Day24.py  Day25.py  Day3.py  Day4.py  Day5.py  Day6.py  Day7.py  Day8.py  Day9.py  Days.py
src/AoC2022/: Day1.py  Day10.py  Day11.py  Day12.py  Day13.py  Day14.py  Day15.py  Day17.py  Day18.py  Day19.py  Day2.py  Day20.py  Day21.py  Day22.py  Day3.py  Day4.py  Day5.py  Day6.py  Day7.py  Day8.py  Day9.py  Days.py  wat.txt
src/AoC2023/: Day1.py  Day10.py  Day11.py  Day2.py  Day3.py  Day4.py  Day5.py  Day6.py  Day7.py  Day8.py  Day9.py  DayX.py  Days.py
tests/AdventUtils/: test_Math.py  test_computer.py  test_conway.py  (+5 more)
(+66 files in other folders)
