[metadata]
name = Advent Of Code Solvers
description = solves all advent of code problems (eventually)
author = Charles Therien
license = GNU GPL3
license_file = LICENSE
platforms = unix, linux, cygwin
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10


[options]
package_dir=
    =src
packages=AdventUtils,AoC2015,AoC2016,AoC2021
install_requires =
    requests>=2
python_requires = >=3.9
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24


[options.package_data]
slapping = py.typed

[flake8]
max-line-length = 160